# Thesis

./: .gitignore  MSOM_testing.py  README.md  RSOM.py  SOM.py  extensions.txt  main.py  pyproject.toml  requirements.txt
docs/: Prototyp_prez.pptx
experiments/mackey_glass/: MSOM_testing.py  RSOM_testing.py  clean_up.py  mackey_glass.xlsx  msom_results.pkl  rsom_results.pkl
experiments/nico/: MSOM_testing.py  RSOM_testing.py  dataset.json  msom_nico_results.pkl  rsom_nico_results.pkl
experiments/reconstruction/: MSOM_backwards_decode.md  MSOM_backwards_decode.py  MSOM_seq_reconstruction.py
experiments/reconstruction/MSOM/: backwards_decode.md  backwards_decode.py  select_map.md  select_map_MSOM.py  seq_reconstruction.py
experiments/reconstruction/RSOM/: inverse_mapping.py  select_map_RSOM.py  seq_reconstruction.py
experiments/seeds/: SOM_testing.py  best_maps.py  bonus.py  som_results.pkl
reconstruction/: MSOM_backwards_decode.md  MSOM_select.py  MSOM_seq_reconstruction.py
src/: MSOM.py  MSOM_testing.py  RSOM_testing.py  SOM.py  util.py
src/models/: MSOM.py  MSOM_cp_vectorized.py  RSOM.py  RSOM_cp_vectorized.py  SOM.py  SOM_cupy.py  SOM_vectorized.py  utils.py
