[project]
name = "som-lab"
version = "0.1.0"
description = "SOM, RSOM, MSOM implementations with experiments and visualizations"
readme = "README.md"
requires-python = ">=3.8"


dependencies = [
    joblib==1.5.3
    matplotlib==3.10.5
    numpy==2.3.2
    scikit_learn==1.7.1
    util==0.0.1
    cupy==13.6.0
    openpyxl==3.1.3
    loky==3.5.6
    cloudpickle==3.1.2
]